--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <script src="stackedBarChart.js"></script>
     <script src="scatterPlotChart.js"></script>
     <script src="sketch.js"></script>
-
-
+    <style>
+        body {
+            background-color: #91bbf1;
+            /* Replace with the desired color code or name */
+        }
+    </style>
 </head>
 
 <body>
